--- a/index.html
+++ b/index.html
@@ -19,6 +19,28 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+
+  <meta name="robots" content="index, follow" />
+ 
+  <meta name='description'
+    content='Cryptora is a leading company in Crypto and blockchain development services including Token Development, NFT Marketplace, Crypto Wallet and Consulting Services. ' />
+  <meta name="keywords"
+    content="Blockchain Development, Blockchain Development Company, Blockchain Development Services,Blockchain App Development Company,Blockchain App Development Services, Blockchain Software Development,Blockchain Software Development Company, Blockchain Development Company,Blockchain Application Development Company" />
+  <meta property="og:site_name" content="Cryptora" />
+  <meta property="og:url" content="https://cryptora.tech/" />
+  <meta property="og:title" content="Blockchain Development Company in India - Cryptora" />
+  <meta property="og:description"
+    content="Cryptora is a leading company in blockchain development services including Token Development, Crypto Wallet and Consulting Services." />
+   <meta property="og:type" content="website" />
+  <meta property="og:image" content=" Add Website Logo URL" />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="https://cryptora.tech/" />
+  <meta name="twitter:title" content="Blockchain Development Company in India - Cryptora" />
+  <meta name="twitter:description"
+    content="Cryptora is a leading company in blockchain development services including Token Development, Crypto Wallet and Consulting Services." />
+  <link rel="canonical" href="https://cryptora.tech" />
+
   <!-- <link rel="stylesheet" href="fonts/icomoon/style.css"> -->
 
   <!-- <link rel="stylesheet" href="css/owl.carousel.min.css"> -->
